tests/ivg/invalid/invalid_arc_large.ivg
format IVG-3
// arc-to with invalid large flag
PATH [move-to 0,0; arc-to 10,0 5 large:maybe]
